--- a/templates/_tableau_iframe_ssl.html
+++ b/templates/_tableau_iframe_ssl.html
@@ -1,4 +1,5 @@
 <div class='tableauPlaceholder mr-auto ml-auto' style='width: 1100px; height: {{ report.height }}px;'>
+  {% csrf_token %}
   <object class='tableauViz' width='1100' height='{{ report.height }}' style='display:none;'>
     <param name='path' value='trusted/{{auth_ticket}}{{ report.site_root }}/views/{{report.embed_name}}' />
     <param name='toolbar' value='top' />
